works on team section

--- a/final-project/index.html
+++ b/final-project/index.html
@@ -67,57 +67,57 @@
                 <img src="images/digital.jpg" alt="iphone held in front of laptop">
                 <h3>Digital Transformation</h3>
                 <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Facilis aspernatur asperiores, nulla numquam minus cupiditate, culpa exercitationem assumenda officia cum eveniet sapiente. Veniam et qui iure quod repellendus porro iste.</p>
-                <div class="svcbttn svcbttn1"> <a href="#placeholder">Digital Plans <i class="fa-sharp fa-solid fa-play"></i></a> </div>
+                <div class="svcbttn svcbttn1"> <a href="#placeholder">Digital Plans&emsp;<i class="fa-sharp fa-solid fa-play"></i></a> </div>
             </div>
             <div class="svc2 svc">
                 <img src="images/marketing.jpg" alt="laptop displaying marketing analytics">
                 <h3>Marketing</h3>
                 <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Facilis aspernatur asperiores, nulla numquam minus cupiditate, culpa exercitationem assumenda officia cum eveniet sapiente. Veniam et qui iure quod repellendus porro iste.</p>
-                <div class="svcbttn svcbttn2"> <a href="#placeholder">Marketing Plans <i class="fa-sharp fa-solid fa-play"></i></a> </div>
+                <div class="svcbttn svcbttn2"> <a href="#placeholder">Marketing Plans&emsp;<i class="fa-sharp fa-solid fa-play"></i></a> </div>
             </div>
             <div class="svc3 svc">
                 <img src="images/video.jpg" alt="iphone displaying youtube logo">
                 <h3>Video Production</h3>
                 <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Facilis aspernatur asperiores, nulla numquam minus cupiditate, culpa exercitationem assumenda officia cum eveniet sapiente. Veniam et qui iure quod repellendus porro iste.</p>
-                <div class="svcbttn svcbttn3"> <a href="#placeholder">Video Plans <i class="fa-sharp fa-solid fa-play"></i></a> </div>
+                <div class="svcbttn svcbttn3"> <a href="#placeholder">Video Plans&emsp;<i class="fa-sharp fa-solid fa-play"></i></a> </div>
             </div>
             <div class="svc4 svc">
                 <img src="images/web.jpg" alt="iphone displaying instagram">
                 <h3>Web Development</h3>
                 <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Facilis aspernatur asperiores, nulla numquam minus cupiditate, culpa exercitationem assumenda officia cum eveniet sapiente. Veniam et qui iure quod repellendus porro iste.</p>
-                <div class="svcbttn svcbttn4"> <a href="#placeholder">Web Plans <i class="fa-sharp fa-solid fa-play"></i></a> </div>
+                <div class="svcbttn svcbttn4"> <a href="#placeholder">Web Plans&emsp;<i class="fa-sharp fa-solid fa-play"></i></a> </div>
             </div>
             <div class="svc5 svc">
                 <img src="images/print.jpg" alt="street with newspaper dispensers lined up">
                 <h3>Print</h3>
                 <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Facilis aspernatur asperiores, nulla numquam minus cupiditate, culpa exercitationem assumenda officia cum eveniet sapiente. Veniam et qui iure quod repellendus porro iste.</p>
-                <div class="svcbttn svcbttn5"> <a href="#placeholder">Print Plans <i class="fa-sharp fa-solid fa-play"></i></a> </div>
+                <div class="svcbttn svcbttn5"> <a href="#placeholder">Print Plans&emsp;<i class="fa-sharp fa-solid fa-play"></i></a> </div>
             </div>
         </div>
     </div>
 
     <!-- russian nesting divs take two -->
     <div class="vision">
-        <img src="images/vision.jpg" alt="dramatically lit paper boats">
-        <div class="wrapper">
+        <img src="images/vision.jpg" alt="dramatically lit paper boats" class="visimg">
+        <div class="wrapper vis">
             <h3>Our Vision</h3>
             <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Illo odit amet reiciendis vitae accusantium. Similique, necessitatibus quibusdam quas modi dolore, id consequatur repellendus quo debitis et aperiam sapiente provident laboriosam!</p>
-            <div class="vsnbttn"> <a href="#placeholder">Learn More <i class="fa-sharp fa-solid fa-play"></i></a> </div>
+            <div class="vsnbttn"> <a href="#placeholder">Learn More&emsp;<i class="fa-sharp fa-solid fa-play"></i></a> </div>
         </div>
     </div>
 
     <!-- needs a parent for flex, and order the second image to the end (link to team) -->
-    <div class="wrapper">
+    <div class="wrapper teamdiv">
         <h2>Our Team</h2>
         <div class="team" id="team">
-            <img src="images/john.jpg" alt="photo of John Doe" class="teamimg1">
-            <div class="teamdsc1">
+            <div class="teamdsc1 tmdsc">
+                <img src="images/john.jpg" alt="photo of John Doe" class="teamimg1 tmimg">
                 <h3>John Doe</h3>
                 <h4>CEO and Co-owner</h4>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis deleniti voluptas voluptates eaque optio? Cumque ullam totam explicabo sed optio modi iste, temporibus, eligendi iure suscipit voluptatum repellendus. Inventore, alias!</p>
             </div>
-            <img src="images/bob.jpg" alt="photo of Bob Rite" class="teamimg2">
-            <div class="teamdsc2">
+            <div class="teamdsc2 tmdsc">
+                <img src="images/bob.jpg" alt="photo of Bob Rite" class="teamimg2 tmimg">
                 <h3>Bob Rite</h3>
                 <h4>CFO and Co-owner</h4>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Mollitia deleniti nisi rerum modi eligendi tempore, atque dicta non quisquam! Laborum ipsum, deserunt suscipit placeat a sapiente impedit. Veniam, distinctio labore?</p>
