--- a/final-project/index.html
+++ b/final-project/index.html
@@ -107,19 +107,21 @@
     </div>
 
     <!-- needs a parent for flex, and order the second image to the end (link to team) -->
-    <div class="wrapper teamdiv">
+    <div class="wrapper">
         <h2>Our Team</h2>
         <div class="team" id="team">
+            <img src="images/john.jpg" alt="photo of John Doe" class="teamimg1 tmimg">
             <div class="teamdsc1 tmdsc">
-                <img src="images/john.jpg" alt="photo of John Doe" class="teamimg1 tmimg">
                 <h3>John Doe</h3>
                 <h4>CEO and Co-owner</h4>
+                <hr class="solid">
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis deleniti voluptas voluptates eaque optio? Cumque ullam totam explicabo sed optio modi iste, temporibus, eligendi iure suscipit voluptatum repellendus. Inventore, alias!</p>
             </div>
+            <img src="images/bob.jpg" alt="photo of Bob Rite" class="teamimg2 tmimg">
             <div class="teamdsc2 tmdsc">
-                <img src="images/bob.jpg" alt="photo of Bob Rite" class="teamimg2 tmimg">
                 <h3>Bob Rite</h3>
                 <h4>CFO and Co-owner</h4>
+                <hr class="solid">
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Mollitia deleniti nisi rerum modi eligendi tempore, atque dicta non quisquam! Laborum ipsum, deserunt suscipit placeat a sapiente impedit. Veniam, distinctio labore?</p>
             </div>
         </div>
@@ -137,7 +139,7 @@
                     <input id="email" type="email" name="email">
                     <label for="msg">Message</label>
                     <textarea name="msg" id="msg"></textarea>
-                    <button type="submit">send</button>
+                    <button type="submit" class="sbmtbttn">Send</button>
                 </form>
             </div>
 
@@ -167,7 +169,7 @@
 
             <div class="location">
                 <h3>Location</h3>
-                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2803.9447375322197!2d-75.7549368!3d45.349927799999996!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4cce0718cc4a6ad7%3A0xc6cc467725843e2b!2sAlgonquin%20College%20Ottawa%20Campus!5e0!3m2!1sen!2sca!4v1680302176629!5m2!1sen!2sca" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2803.9447375322197!2d-75.7549368!3d45.349927799999996!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4cce0718cc4a6ad7%3A0xc6cc467725843e2b!2sAlgonquin%20College%20Ottawa%20Campus!5e0!3m2!1sen!2sca!4v1680302176629!5m2!1sen!2sca" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade" class="map"></iframe>
             </div>
         </div>
     </div>
