messing around with desktop

--- a/final-project/index.html
+++ b/final-project/index.html
@@ -21,17 +21,18 @@
         <div class="wrapper">
            <div class="wtfbox"><img src="images/logo.png" alt="logo of three stars"></div>
             <nav>
-                <div class="wtfbox centerbox"><a href="#home" class="homebox">Home</a></div>
+                <div class="centerbox"><a href="#home" class="homebox">Home</a></div>
                 <a href="#about-us">About Us</a>
                 <a href="#services">Services</a>
                 <a href="#team">Team</a>
                 <a href="#contact">Contact</a>
-            </nav>
-            <form action="placeholder.txt" method="get" class="form1">
+                <form action="placeholder.txt" method="get" class="form1">
                 <label for="search"></label>
                 <input id="search" type="text" name="search" placeholder="Search">
                 <button type="submit" class="searchbutton"><i class="fa-sharp fa-solid fa-magnifying-glass"></i></button>
             </form> 
+            </nav>
+            
         </div>
     </header>
 
