fixes the fucking stupid nav bar

--- a/final-project/index.html
+++ b/final-project/index.html
@@ -18,21 +18,20 @@
     <!-- forgot about the header bleed -->
     <!-- header with logo, nav, and search (mobile: vertical, desktop: horizontal) -->
     <header>
-        <div class="wrapper">
+        <div class="wrapper dsknav">
            <div class="wtfbox"><img src="images/logo.png" alt="logo of three stars"></div>
-            <nav>
+            <nav class="navlinks">
                 <div class="centerbox"><a href="#home" class="homebox">Home</a></div>
                 <a href="#about-us">About Us</a>
                 <a href="#services">Services</a>
                 <a href="#team">Team</a>
                 <a href="#contact">Contact</a>
-                <form action="placeholder.txt" method="get" class="form1">
+            </nav>
+            <form action="placeholder.txt" method="get" class="form1">
                 <label for="search"></label>
                 <input id="search" type="text" name="search" placeholder="Search">
                 <button type="submit" class="searchbutton"><i class="fa-sharp fa-solid fa-magnifying-glass"></i></button>
             </form> 
-            </nav>
-            
         </div>
     </header>
 
