--- a/final-project/index.html
+++ b/final-project/index.html
@@ -60,7 +60,7 @@
     </div>
 
     <!-- needs parent for grid format, with SIX columns (link to services) -->
-    <div class="wrapper">
+    <div class="wrapper clearclass">
         <h2 class="svch2">Our Services</h2>
         <div class="services" id="services">
             <div class="svc1 svc">
